# base_django_dev_scaffold-

./: .gitignore  README.md  manage.py  pyproject.toml
apps/: __init__.py
apps/oauth/: models.py  urls.py  views.py
apps/system/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
base_django_dev_scaffold/: asgi.py  celery.py  urls.py  wsgi.py
base_django_dev_scaffold/settings/: __init__.py  base.py  prod.py
utils/: __init__.py
utils/c_auth_backend/: __init__.py  backend.py
utils/c_middleware/: __init__.py
utils/c_restframework/: c_exception.py  c_generics.py  c_modelviewset.py  c_pagination.py  c_permission.py  c_renderer.py  c_response.py  c_validator.py
utils/common/: __init__.py  exception.py
